--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/geojson": "^7946.0.14",
+    "exifr": "^7.1.3",
     "maplibre-gl": "^4.5.0",
     "vue": "^3.4.29"
   },
